--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     container_name: quassel_Core
     networks:
       - public
-    ports:
-      - "4242:4242"
+#    ports:
+#      - "4242:4242"
     volumes:
       - "/srv/quassel:/var/lib/quassel"
     labels:
@@ -15,6 +15,7 @@ services:
       - "traefik.frontend.rule=Host:"
       - "traefik.enable=true"
       - "traefik.port=4242"
+#      - "traefik.frontend.auth.basic=[]"
 networks:
   public:
     external:
