--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
     container_name: quassel_core
     networks:
       - quassel_net
+    ports:
+      - 4242:4242
     volumes:
       - "/srv/quassel:/var/lib/quassel"
 
