--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,23 @@
 version: '3'
 
 services:
+
+  web:
+    build: ./web
+    container_name: quassel_web
+    depends_on: 
+      - core
+    networks:
+      - public
+      - quassel_net
+    labels:
+      - traefik.backend=QuasselWeb
+      - traefik.frontend.rule=Host:
+      - traefik.enable=true
+      - traefik.port=8080
+      - traefik.frontend.auth.basic=
+
+
   proxy:
     build: ./proxy
     container_name: quassel_proxy
@@ -10,7 +27,7 @@ services:
       - public
       - quassel_net
     labels:
-      - "traefik.backend=ircQuassel"
+      - "traefik.backend=QuasselProxy"
       - "traefik.frontend.rule=Host:"
       - "traefik.enable=true"
       - "traefik.port=8080"
